--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -1,7 +1,12 @@
 //responsive
-$small:429px;
-$mobiles:calc($small - 1px);
+$small: 429px;
+$mobiles: calc($small - 1px);
 $medium: 768px;
-$extra-large:1200px;
+$extra-large: 1200px;
 $desktop: calc($extra-large + 0px);
 $tablet: calc($extra-large - 1px);
+
+//font
+
+$primary-font: PoppinsRegular;
+$secondary-font: PoppinsBold;
