create layout header top (no responsive and background

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -9,3 +9,9 @@ $tablet: calc($extra-large - 1px);
 //font
 $primary-font: PoppinsRegular;
 $secondary-font: PoppinsBold;
+
+// color
+$color-main: blue;
+$color-text-1: rgba(0, 0, 0, 1);
+$color-text-2: rgba(0, 0, 0, 0.7);
+$color-text-3: rgba(0, 0, 0, 0.6);
