--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-size: $primary-font;
+    font-family: $primary-font;
     font-weight: 500;
     font-size: pxToRem(14);
     max-width: 1800px;
