complete task create header text main (no responsive)

--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -26,4 +26,20 @@
             </include>
         </div>
     </div>
+    <!-- Start header title main -->
+    <div class="header-title">
+        <div class="header-title--main">
+            <h1 class="header__title--h1">
+                İşinize uygun <span>tasarım</span> ve <span>yazılımlar</span>
+            </h1>
+            <p class="header__title--value">
+                360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web
+                tasarım ve web yazılım hizmetleri sunmaktayız.
+            </p>
+            <include src="./components/button.html" locals='{
+                "list":["Detaylı İncele"]
+            }'>
+            </include>
+        </div>
+    </div>
 </header>
