--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -2,6 +2,7 @@
 
 .header-container {
     width: 100%;
+    background-color: #d9d9e5;
 
     .header-top {
         width: 100%;
@@ -46,5 +47,39 @@
                 font-size: 1rem;
             }
         }
+    }
+
+    .header-title {
+        width: 100%;
+        height: 758px;
+        // set bg header
+        background-image: linear-gradient(0, white, rgba(204, 204, 216, 0.868)), url(./../assets/img/backgroud.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+
+        .header-title--main {
+            width: pxToRem(732);
+            height: pxToRem(308);
+            text-align: center;
+            padding-top: pxToRem(68);
+
+            .header__title--h1 {
+                font-weight: 600;
+                font-size: pxToRem(64);
+
+                span {
+                    color: $color-main;
+                }
+            }
+
+            .header__title--value {
+                padding: pxToRem(30) 0;
+                font-size: 1rem;
+            }
+        }
+
     }
 }
