change name class h1

--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -29,7 +29,7 @@
     <!-- Start header title main -->
     <div class="header-title">
         <div class="header-title--main">
-            <h1 class="header__title--h1">
+            <h1 class="header__h1--title">
                 İşinize uygun <span>tasarım</span> ve <span>yazılımlar</span>
             </h1>
             <p class="header__title--value">
