--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -66,7 +66,7 @@
             text-align: center;
             padding-top: pxToRem(68);
 
-            .header__title--h1 {
+            .header__h1--title {
                 font-weight: 600;
                 font-size: pxToRem(64);
 
