create header box main (no responsive)

--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -42,4 +42,18 @@
             </include>
         </div>
     </div>
+    <!-- Start header box main -->
+    <div class="header__box">
+        <div class="header__box--main">
+            <figure class="header__figure--bgImage">
+                <img src="../assets/img/backgroud.png" alt="">
+                <div class="header__box--text">
+                    <h2>Web sitesi ve Kurumsal Kimlik Tasarımları</h2>
+                    <p>Online dünyadaki yüzünüz olan web sitelerinizi tasarlar. E-ticaret siteleri dahil olmak üzere tüm
+                        ihyitaçlarınıza çözümler sunar.</p>
+                </div>
+            </figure>
+            <img src="../assets/img/list-number-123.png" alt="" class="header__img--list">
+        </div>
+    </div>
 </header>
