--- a/src/stylesheets/abstracts/_functions.scss
+++ b/src/stylesheets/abstracts/_functions.scss
@@ -4,3 +4,8 @@
 @function pxToRem($px, $rem: 16) {
   @return math.div($px, $rem) * 1rem;
 }
+
+//px-to-percent
+@function pxToPer($pxParent, $pxChildren) {
+  @return (($pxChildren*100) / $pxParent) * 1%;
+}
