--- a/src/stylesheets/components/_navList.scss
+++ b/src/stylesheets/components/_navList.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 
 .nav__item {
-    .nav__item-link {
+    &-link {
         color: $color-text-1;
         text-decoration: none;
         font-size: 1rem;
