--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -1,14 +1,14 @@
 <!-- Start header -->
-<header class="header-container">
+<header class="header">
     <!-- Start header top -->
-    <div class="header-top">
-        <div class="header-top__logo">
-            <figure class="header-top__logo-item">
-                <div class="logo"></div>
+    <div class="header__top">
+        <div class="header__top--logo">
+            <figure>
+                <div class="header__top--logo-blue"></div>
                 <figcaption>Digital <span>Agency</span></figcaption>
             </figure>
         </div>
-        <nav class="header-top__nav-container">
+        <nav class="header__top--nav-container">
             <ul>
                 <include src="./components/navList.html" locals='{
                     "list":["Ana Sayfa", "Kurumsal", "Neler Yapıyoruz?","Blog"],
@@ -27,12 +27,12 @@
         </div>
     </div>
     <!-- Start header title main -->
-    <div class="header-title">
-        <div class="header-title--main">
-            <h1 class="header__h1--title">
+    <div class="header__title">
+        <div class="header__title--main">
+            <h1>
                 İşinize uygun <span>tasarım</span> ve <span>yazılımlar</span>
             </h1>
-            <p class="header__title--value">
+            <p class="review__text">
                 360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web
                 tasarım ve web yazılım hizmetleri sunmaktayız.
             </p>
@@ -45,15 +45,15 @@
     <!-- Start header box main -->
     <div class="header__box">
         <div class="header__box--main">
-            <figure class="header__figure--bgImage">
+            <figure class="box-main">
                 <img src="../assets/img/backgroud.png" alt="">
-                <div class="header__box--text">
+                <div class="box-main__text">
                     <h2>Web sitesi ve Kurumsal Kimlik Tasarımları</h2>
                     <p>Online dünyadaki yüzünüz olan web sitelerinizi tasarlar. E-ticaret siteleri dahil olmak üzere tüm
                         ihyitaçlarınıza çözümler sunar.</p>
                 </div>
             </figure>
-            <img src="../assets/img/list-number-123.png" alt="" class="header__img--list">
+            <img src="../assets/img/list-number-123.png" alt="" class="image__list-number">
         </div>
     </div>
 </header>
