--- a/src/stylesheets/components/_button.scss
+++ b/src/stylesheets/components/_button.scss
@@ -12,7 +12,7 @@
         transform: scale(1.1);
     }
 
-    .btn__content {
+    &__content {
         color: white;
         font-size: 1rem;
     }
