--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -1,10 +1,10 @@
 @use "../abstracts/" as *;
 
-.header-container {
+.header {
     width: 100%;
     background-color: #d9d9e5;
 
-    .header-top {
+    &__top {
         width: 100%;
         height: pxToRem(95);
         display: flex;
@@ -12,14 +12,13 @@
         align-items: center;
         padding: 0 pxToRem(120);
 
-        // logo
-        &__logo {
-            .header-top__logo-item {
+        &--logo {
+            figure {
                 display: flex;
                 align-items: center;
                 column-gap: 14px;
 
-                .logo {
+                &-blue {
                     width: pxToRem(44);
                     height: pxToRem(44);
                     border-radius: 50%;
@@ -34,7 +33,7 @@
         }
 
         // nav header top
-        &__nav-container {
+        &--nav-container {
             ul {
                 display: flex;
                 column-gap: pxToRem(40);
@@ -49,7 +48,7 @@
         }
     }
 
-    .header-title {
+    &__title {
         width: 100%;
         height: 758px;
         // set bg header
@@ -60,13 +59,13 @@
         display: flex;
         justify-content: center;
 
-        .header-title--main {
+        &--main {
             width: pxToRem(732);
             height: pxToRem(308);
             text-align: center;
             padding-top: pxToRem(68);
 
-            .header__h1--title {
+            h1 {
                 font-weight: 600;
                 font-size: pxToRem(64);
 
@@ -75,7 +74,7 @@
                 }
             }
 
-            .header__title--value {
+            .review__text {
                 padding: pxToRem(30) 0;
                 font-size: 1rem;
             }
@@ -83,7 +82,7 @@
 
     }
 
-    .header__box {
+    &__box {
         width: 100%;
         margin-top: -350px;
         display: flex;
@@ -93,14 +92,14 @@
             width: 77.5%;
             position: relative;
 
-            .header__figure--bgImage {
+            .box-main {
                 position: relative;
 
                 img {
                     width: 100%;
                 }
 
-                .header__box--text {
+                &__text {
                     width: 65%;
                     position: absolute;
                     top: 50%;
@@ -126,7 +125,7 @@
                 }
             }
 
-            .header__img--list {
+            .image__list-number {
                 width: 98px;
                 position: absolute;
                 right: 0;
