complete 1/2 layout main of website

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -36,6 +36,48 @@
 
             </include>
         </div>
+    </div>
+    <div class="Preferential">
+        <div class="Preferential__box">
+            <title class="Preferential__box--title">
+                Ürününüz veya hizmetiniz için en iyisini birlikte yapalım.
+            </title>
+            <p class="Preferential__box--text">
+                360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web
+                tasarım ve web yazılım hizmetleri sunmaktayız.
+            </p>
+            <div class="Preferential__box--button">
+                <include src="./components/button.html" locals='{
+                    "list": ["HEMEN TEKLİF ALIN"]
+                }'>
+                </include>
+            </div>
+        </div>
+    </div>
+    <div class="Work">
+        <p class="Work__question">
+            Neler <span>Yapıyoruz?</span>
+        </p>
+        <title class="Work__title">
+            Sizin için neler yapıyoruz?
+        </title>
+        <p class="Work__text">
+            360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web
+            tasarım ve web yazılım hizmetleri sunmaktayız.
+        </p>
+    </div>
+    <div class="Review-work">
+        <img src="../assets/img/img-book.png" alt="" class="Review-work__image">
+        <div class="Review-work__box-text">
+            <title class="Review-work__box-text--title">
+                Sizin için neler yapabiliriz beraber bakalım.
+            </title>
+            <p class="Review-work__box-text--review">
+                Tüm platformlarda sunduğumuz, web tasarım hizmetimiz ile ilgili bilgiler edinelim.
+            </p>
+            <div class="Review-work__box-text--jobs">
 
+            </div>
+        </div>
     </div>
 </main>
