complete 3/5 layout main of website

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -76,8 +76,55 @@
                 Tüm platformlarda sunduğumuz, web tasarım hizmetimiz ile ilgili bilgiler edinelim.
             </p>
             <div class="Review-work__box-text--jobs">
-
+                <div class="jamb--blue"></div>
+                <div class="List-text">
+                    <div class="List-text__box">
+                        <title>
+                            Web Tasarım
+                        </title>
+                        <p>
+                            Var olan veya yeni kurulan işletmenizin, modern bir kurumsal kimliğe sahip olması için web
+                            sitesi.
+                        </p>
+                    </div>
+                    <div class="List-text__box">
+                        <title>
+                            Dijital Pazarlama
+                        </title>
+                        <p>
+                            Web sitenizin veya işletmenizin, daha popüler hale gelmesi için çeşitli hizmetler sunuyoruz.
+                        </p>
+                    </div>
+                    <div class="List-text__box">
+                        <title>
+                            Prodüksiyon
+                        </title>
+                        <p>
+                            İşletmenizin tanıtımının daha güzel hale gelmesi için, fotoğraf çekimi ve prodüksiyon
+                            yapıyoruz.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="Share-posts">
+        <div class="Share-posts__title">
+            <p>Neler <span>Yapıyoruz?</span> </p>
+            <title>
+                Öğreniyoruz, sizinle paylaşıyoruz.
+            </title>
+            <p>Alanında uzman yazar arkadaşlarımızın, bilgi paylaşımı yaptıkları yazıları inceleyelim.</p>
+        </div>
+        <div class="Share-posts__nav">
+            <!-- include components nav button -->
+        </div>
+        <!-- <div class="Share-posts__page">
+            <include src="../components/navList.html" locals='{
+                "list":["Hepsini Gör", "Web Tasarım", "Kurumsal Kimlik Tasarımı","SEO","Dijital Pazarlama" ],
+            }'>
+
+            </include>
+        </div> -->
     </div>
 </main>
