--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -22,4 +22,9 @@ body {
     max-width: 1800px;
     margin: 0 auto;
     min-width: 320px;
+
+    p {
+        line-height: 26px;
+        color: rgba(0, 0, 0, 0.4);
+    }
 }
