--- a/src/stylesheets/layouts/_main.scss
+++ b/src/stylesheets/layouts/_main.scss
@@ -95,6 +95,7 @@ main {
         margin-right: 118px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         &__image {
             width: 666px;
@@ -103,12 +104,49 @@ main {
 
         &__box-text {
             width: 565px;
-            height: 100%;
+            margin-right: 100px;
 
             &--title {
                 display: block;
                 font-size: 36px;
                 font-weight: 500;
+                line-height: 50px;
+            }
+
+            &--review {
+                margin: 30px 0 86px 0;
+                font-size: 18px;
+                line-height: 29px;
+            }
+
+            &--jobs {
+                display: flex;
+                line-height: 26px;
+                font-size: 18px;
+
+                .jamb--blue {
+                    background-color: $color-main;
+                    width: 7px;
+                    height: 110px;
+                }
+
+                .List-text {
+                    width: 100%;
+                    margin-left: 20px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 34px;
+
+                    &__box {
+                        title {
+                            display: block;
+                            font-weight: 500;
+                            font-size: 24.5px;
+                            padding-bottom: 10px;
+                        }
+                    }
+                }
+
             }
         }
     }
