--- a/src/stylesheets/layouts/_main.scss
+++ b/src/stylesheets/layouts/_main.scss
@@ -150,4 +150,82 @@ main {
             }
         }
     }
+
+    .Share-posts {
+        width: 100%;
+        height: 835px;
+        background-color: rgba(196, 196, 196, 0.1);
+        margin-top: 120px;
+
+        &__title {
+            text-align: center;
+            margin-top: 70px;
+
+            span {
+                color: $color-main;
+            }
+
+            title {
+                display: block;
+                font-size: 32px;
+                font-weight: 600;
+                margin: 20px 0;
+            }
+        }
+
+        &__nav {
+            width: 910px;
+            margin: 60px auto 30px auto;
+
+            .navTitle {
+                width: 100%;
+                display: flex;
+                gap: 20px;
+
+                &--box {
+                    height: 50px;
+                    display: block;
+                    background-color: rgba(22, 93, 245, 0.18);
+                    padding: 16px 25px;
+                    border-radius: 12px;
+
+                    &:first-of-type {
+                        background-color: rgba(22, 93, 245, 0.6);
+                    }
+
+                    .nav-link {
+                        text-decoration: none;
+                        color: white;
+                    }
+                }
+            }
+        }
+
+        &__page {
+            display: flex;
+            justify-content: space-between;
+            margin: 0 60px 0 122px;
+        }
+    }
+
+    .Feedback {
+        text-align: center;
+        width: 100%;
+
+        &__title {
+            display: block;
+            width: 760px;
+            font-size: 46px;
+            font-weight: 600;
+            line-height: 52px;
+            margin: 120px auto 80px auto;
+        }
+
+        &__list {
+            width: 100%;
+            margin-bottom: 120px;
+            display: flex;
+            justify-content: center;
+        }
+    }
 }
