complete responsive layout header

--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -18,12 +18,13 @@
                 </include>
             </ul>
         </nav>
-        <div class="header-top__button">
+        <div class="header__top--button">
             <span>EN</span>
             <include src="./components/button.html" locals='{
                 "list":["Müşteri Girişi"]
             }'>
             </include>
+            <img src="../assets/icon/menu.png" alt="">
         </div>
     </div>
     <!-- Start header title main -->
@@ -33,8 +34,7 @@
                 İşinize uygun <span>tasarım</span> ve <span>yazılımlar</span>
             </h1>
             <p class="review__text">
-                360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web
-                tasarım ve web yazılım hizmetleri sunmaktayız.
+                360° dijital marka danışmanlığı, web tasarım ve reklam ajansıdır. İşletmelerin ihtiyaçlarına uygun web tasarım ve web yazılım hizmetleri sunmaktayız.
             </p>
             <include src="./components/button.html" locals='{
                 "list":["Detaylı İncele"]
@@ -49,8 +49,7 @@
                 <img src="../assets/img/backgroud.png" alt="">
                 <div class="box-main__text">
                     <h2>Web sitesi ve Kurumsal Kimlik Tasarımları</h2>
-                    <p>Online dünyadaki yüzünüz olan web sitelerinizi tasarlar. E-ticaret siteleri dahil olmak üzere tüm
-                        ihyitaçlarınıza çözümler sunar.</p>
+                    <p>Online dünyadaki yüzünüz olan web sitelerinizi tasarlar. E-ticaret siteleri dahil olmak üzere tüm ihyitaçlarınıza çözümler sunar.</p>
                 </div>
             </figure>
             <img src="../assets/img/list-number-123.png" alt="" class="image__list-number">
