complete responsive layout main

--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -2,6 +2,11 @@
 .header {
     width: 100%;
     background-color: white;
+    @include mobile {
+        p {
+            font-size: 13px !important;
+        }
+    }
     &__top {
         width: 100%;
         height: pxToRem(95);
