--- a/src/stylesheets/layouts/_main.scss
+++ b/src/stylesheets/layouts/_main.scss
@@ -1,38 +1,63 @@
 @use "../abstracts/" as *;
-
 main {
     background-color: white;
     margin-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    @include mobile {
+        p {
+            font-size: 13px !important;
+        }
+    }
     .OurWorkflow {
-
+        width: 100%;
         &__text {
             text-align: center;
             width: 710px;
             margin: 0 auto;
-
+            @include mobile {
+                width: 100%;
+                padding: 0 10px;
+            }
             span {
                 color: $color-main;
             }
-
             title {
                 font-size: 32px;
                 display: block;
                 font-weight: 600;
                 padding: 20px 0;
+                @include mobile {
+                    font-size: 23px;
+                }
             }
         }
-
         &__list {
             display: flex;
             justify-content: space-between;
             margin: 60px auto;
+            @include tablet {
+                margin: 60px pxToTablet(120px);
+                flex-wrap: wrap;
+                row-gap: 60px;
+                .listBox-icon:nth-child(-n+2) {
+                    width: 50%;
+                }
+                .listBox-icon:nth-child(3) {
+                    width: 100%;
+                }
+            }
+            @include mobile {
+                flex-wrap: wrap;
+                row-gap: 60px;
+                margin: 60px 20px;
+                .listBox-icon {
+                    width: 100%;
+                }
+            }
         }
     }
-
     .Preferential {
         margin: 60px auto;
         width: 100%;
@@ -41,7 +66,6 @@ main {
         display: flex;
         justify-content: center;
         align-items: center;
-
         &__box {
             width: 761px;
             height: 295px;
@@ -49,14 +73,18 @@ main {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-
+            @include mobile {
+                padding: 0 20px;
+                &--title {
+                    font-size: 36px !important;
+                }
+            }
             &--title {
                 display: block;
                 width: 100%;
                 font-size: 50px;
                 font-weight: 600;
             }
-
             &--button {
                 .btn {
                     width: 226px;
@@ -64,7 +92,6 @@ main {
             }
         }
     }
-
     .Work {
         width: 710px;
         height: 160px;
@@ -74,13 +101,18 @@ main {
         justify-content: space-between;
         align-items: center;
         text-align: center;
-
+        @include mobile {
+            width: 100%;
+            padding: 0 35px;
+            &__title {
+                font-size: 23px !important;
+            }
+        }
         &__question {
             span {
                 color: $color-main;
             }
         }
-
         &__title {
             display: block;
             width: 410px;
@@ -88,7 +120,6 @@ main {
             font-weight: 500;
         }
     }
-
     .Review-work {
         width: 100%;
         height: 697px;
@@ -96,47 +127,73 @@ main {
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+        @include tablet {
+            margin: 0;
+        }
+        @include mobile {
+            width: 100%;
+            height: auto;
+            flex-wrap: wrap;
+            margin-right: 0;
+            row-gap: 60px;
+            &__image {
+                width: 100% !important;
+                height: auto !important;
+            }
+            &__box-text {
+                width: 100% !important;
+                margin-right: 0 !important;
+                &--title {
+                    font-size: 24px !important;
+                }
+                &--review {
+                    margin: 20px 0 34px 0 !important;
+                }
+            }
+        }
         &__image {
             width: 666px;
             height: 100%;
+            @include tablet {
+                overflow: hidden;
+            }
         }
-
         &__box-text {
             width: 565px;
             margin-right: 100px;
-
+            @include tablet {
+                width: 100%;
+                margin-right: 0;
+                margin-left: pxToTablet(90px);
+                padding-right: pxToTablet(40px);
+                max-height: 100%;
+            }
             &--title {
                 display: block;
                 font-size: 36px;
                 font-weight: 500;
                 line-height: 50px;
             }
-
             &--review {
                 margin: 30px 0 86px 0;
                 font-size: 18px;
                 line-height: 29px;
             }
-
             &--jobs {
                 display: flex;
                 line-height: 26px;
                 font-size: 18px;
-
                 .jamb--blue {
                     background-color: $color-main;
                     width: 7px;
                     height: 110px;
                 }
-
                 .List-text {
                     width: 100%;
                     margin-left: 20px;
                     display: flex;
                     flex-direction: column;
                     gap: 34px;
-
                     &__box {
                         title {
                             display: block;
@@ -146,25 +203,26 @@ main {
                         }
                     }
                 }
-
             }
         }
     }
-
     .Share-posts {
         width: 100%;
         height: 835px;
         background-color: rgba(196, 196, 196, 0.1);
         margin-top: 120px;
-
+        @include mobile {
+            margin-top: 60px;
+            &__title {
+                margin-top: 60px !important;
+            }
+        }
         &__title {
             text-align: center;
             margin-top: 70px;
-
             span {
                 color: $color-main;
             }
-
             title {
                 display: block;
                 font-size: 32px;
@@ -172,27 +230,58 @@ main {
                 margin: 20px 0;
             }
         }
-
         &__nav {
             width: 910px;
             margin: 60px auto 30px auto;
-
+            @include tablet {
+                width: 100%;
+                padding-left: 20px;
+                .navTitle {
+                    overflow: hidden;
+                }
+            }
+            @include mobile {
+                width: 100%;
+                padding-left: 20px;
+                .navTitle {
+                    overflow: hidden;
+                }
+                a {
+                    font-size: 13px !important;
+                    display: block;
+                }
+            }
             .navTitle {
                 width: 100%;
                 display: flex;
                 gap: 20px;
-
                 &--box {
                     height: 50px;
                     display: block;
                     background-color: rgba(22, 93, 245, 0.18);
                     padding: 16px 25px;
                     border-radius: 12px;
-
+                    @include tablet {
+                        text-align: center;
+                        flex: 0 0 18%;
+                        padding: 0;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                    @include mobile {
+                        flex: 0 0 45%;
+                        padding: 0;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        &:nth-last-child(-n+2) {
+                            display: none;
+                        }
+                    }
                     &:first-of-type {
                         background-color: rgba(22, 93, 245, 0.6);
                     }
-
                     .nav-link {
                         text-decoration: none;
                         color: white;
@@ -200,18 +289,24 @@ main {
                 }
             }
         }
-
         &__page {
             display: flex;
             justify-content: space-between;
             margin: 0 60px 0 122px;
+            @include tablet {
+                overflow: hidden;
+                margin: 0;
+                margin-left: pxToTablet(65px);
+            }
+            @include mobile {
+                margin: 0 0 0 20px;
+                overflow: hidden;
+            }
         }
     }
-
     .Feedback {
         text-align: center;
         width: 100%;
-
         &__title {
             display: block;
             width: 760px;
@@ -219,13 +314,21 @@ main {
             font-weight: 600;
             line-height: 52px;
             margin: 120px auto 80px auto;
+            @include mobile {
+                font-size: 24px;
+                width: 100%;
+                margin: 60px 0;
+            }
         }
-
         &__list {
             width: 100%;
             margin-bottom: 120px;
             display: flex;
             justify-content: center;
+            @include mobile {
+                padding: 0 48px;
+                margin-bottom: 60px;
+            }
         }
     }
 }
