complete responsive layout footer

--- a/src/stylesheets/layouts/_footer.scss
+++ b/src/stylesheets/layouts/_footer.scss
@@ -1,5 +1,4 @@
 @use "../abstracts/" as *;
-
 footer {
     height: 70px;
     display: flex;
@@ -7,12 +6,26 @@ footer {
     align-items: center;
     background-color: rgba(22, 93, 245, 1);
     padding: 0 75px;
-
+    width: 100%;
+    @include tablet {
+        padding: 0 pxToTablet(20px);
+        text-align: center;
+    }
+    @include mobile {
+        height: 414px;
+        padding: 0;
+        flex-direction: column;
+        justify-content: center;
+        .navList {
+            flex-direction: column;
+            text-align: center;
+            margin-bottom: 70px;
+        }
+    }
     a,
     p {
         color: white !important;
     }
-
     .navList {
         display: flex;
         gap: 32px;
